Fix: updates create_file_list.py to deal with reference reads

--- a/config.yaml
+++ b/config.yaml
@@ -4,11 +4,9 @@ output_dir:
 # tsv file with an absolute file path per line
 input_dir: 
 
-# prefix of reference reads
-ref_reads_prefix:
-
-# how to identify read 1 and read 2 datafiles
-pairing_identifiers: R1,R2
+# reference read files
+reference_reads_R1: 
+reference_reads_R1: 
 
 # path to directory containing non-reference reads
 read_dir:
